# MackesWorkstation

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MACKES_SHELL_SPEC.md  MANIFEST.in  MIGRATION.md  Makefile  README.md  install.sh  preview.sh  pyproject.toml  setup.py
.claude/: CLAUDE.md  (+1 more)
crates/applets/applet-api/: Cargo.toml
crates/applets/audio/: Cargo.toml
crates/mackes-kdc/: Cargo.toml
crates/mackes-kdc/src/: lib.rs
crates/mackes-kdc/tests/: integration.rs
crates/mackes-mesh-types/: Cargo.toml
crates/mackes-mesh-types/src/: lib.rs  tags.rs
crates/mackes-panel/: Cargo.toml
crates/mackes-panel/src/: admin_menu.rs  app_module.rs  app_switcher.rs  apple_menu.rs  clipboard_manager.rs  config_store.rs  desktop_files.rs  dock.rs  hero.rs  i3_cluster.rs  icon_mapper.rs  icons.rs  logout_dialog.rs  main.rs  mesh_module.rs  network_manager.rs  notification_bell.rs  notification_center.rs  recents.rs  root_menu.rs  start_menu.rs  status_cluster.rs  test_env.rs  toasts.rs  top_bar.rs  watermark.rs  weather.rs  window_buttons.rs  windows.rs
crates/mackesd/: Cargo.toml
crates/mackesd/src/: audit.rs  audit_log.rs  enrollment.rs  https_fallback.rs  identity.rs  legacy_inventory.rs  lib.rs  mesh_media.rs  metrics.rs  nebula_enroll.rs  passcode.rs  passcode_creds.rs  peer_join.rs  policy.rs  preflight.rs  probe_nmap.rs  reconcile.rs  reconciler_hook.rs  revisions.rs  store.rs  stun.rs  surrounding_hosts.rs  telemetry.rs  topology.rs  validation.rs  voip_rtt.rs  worker.rs
crates/mackesd/src/ca/: backup.rs  ban_list.rs  bundle.rs  epoch.rs  mod.rs  revoke.rs  sign.rs
crates/mackesd/src/config/: tag_manifest.rs
crates/mackesd/src/gluster/: bind.rs  headroom.rs  mod.rs  snapshot.rs
crates/mackesd/src/ipc/: fleet.rs  gluster.rs  mod.rs  nebula.rs  notifications.rs  portal.rs  session.rs  settings.rs  shell.rs
crates/mackesd/src/meshfs/: mod.rs
crates/mackesd/src/policy/: mod.rs
crates/mackesd/src/reconcile/: mod.rs
crates/mackesd/src/settings/: automount.rs  autostart.rs  display.rs  font.rs  input.rs  keybinds.rs  mod.rs  notification.rs  power.rs  theme.rs  wallpaper.rs
crates/mackesd/src/store/: mod.rs
crates/mackesd/src/telemetry/: mod.rs
crates/mackesd/src/topology/: mod.rs
crates/mackesd/tests/: acceptance_send_to_audio_nodes.rs  failure_scenarios.rs  integration_testcontainers.rs  lan_discovery_e2e.rs  reconcile_cli.rs
crates/mde-alert-emit/: Cargo.toml
crates/mde-alert-emit/src/: main.rs
crates/mde-bus/: Cargo.toml
crates/mde-bus/src/: audit.rs  correlate.rs  dnd.rs  lib.rs  main.rs  persist.rs  retention.rs  rpc.rs  seed.rs  surface.rs
crates/mde-clipd/: Cargo.toml
crates/mde-clipd/src/: blobstore.rs  main.rs  session.rs  subscribe.rs
crates/mde-files/: Cargo.toml
crates/mde-files/src/: app.rs  backend.rs  demo_data.rs  icons.rs  lib.rs  mesh_backend.rs  model.rs  panels.rs  prefs.rs  selection.rs  theme.rs  views.rs  widgets.rs
crates/mde-iced-components/: Cargo.toml
crates/mde-iced-components/src/: lib.rs
crates/mde-installer/: Cargo.toml
crates/mde-installer/src/: confirm.rs  intent_file.rs  lib.rs  peers.rs  profile.rs  smoke.rs  wipe.rs
crates/mde-kdc/: Cargo.toml
crates/mde-kdc-host/: Cargo.toml
crates/mde-kdc-host/src/: discovery.rs  lib.rs  pairing.rs
crates/mde-kdc-proto/: Cargo.toml
crates/mde-kdc-proto/src/: codec.rs  crypto.rs  discovery.rs  plugins.rs  wire.rs
crates/mde-kdc-proto/tests/: aead_session.rs  rsa_handshake.rs
crates/mde-kdc/src/: dbus.rs  discovery.rs  dispatch.rs  keygen.rs  lib.rs  pairing.rs  tls.rs  transport.rs
crates/mde-motion/: Cargo.toml
crates/mde-motion/src/: lib.rs
crates/mde-music/: Cargo.toml
crates/mde-music/src/: album.rs  color.rs  lib.rs  library.rs  main.rs  nav.rs  nowplaying.rs  prefs.rs  search.rs
crates/mde-musicd/: Cargo.toml
crates/mde-musicd/src/: airsonic.rs  bus_responder.rs  cache.rs  creds.rs  engine.rs  lib.rs  main.rs  state.rs
crates/mde-panel/: Cargo.toml
crates/mde-panel/src/: clipboard.rs  dock_dnd.rs  expose.rs  host.rs  icon_mapper.rs  layer_shell.rs  lib.rs  main.rs  panel_icons.rs  sliders.rs  top_bar.rs  toplevels.rs  weather.rs
crates/mde-popover/: Cargo.toml
crates/mde-popover/src/: app_switcher.rs  audio.rs  clipboard.rs  clock.rs  dismiss.rs  expose.rs  farewell.rs  hostname_info.rs  icon_mapper.rs  lock.rs  main.rs  minimized.rs  network.rs  notifications.rs  overview.rs  snap_assist.rs  start_menu.rs  status.rs  toasts.rs  urgent.rs  watermark.rs  which_key.rs  window_actions.rs
crates/mde-portal/: Cargo.toml
crates/mde-portal/src/: app.rs  card_index.rs  dbus.rs  fonts.rs  lib.rs  main.rs  marquee.rs  mde_open_main.rs  portal_full_main.rs  status.rs  template.rs  workspace.rs
crates/mde-session/: Cargo.toml
crates/mde-session/src/: autostart.rs  lock.rs  main.rs  session.rs
crates/mde-theme-alias/: Cargo.toml
crates/mde-theme-alias/src/: lib.rs
crates/mde-voice-hud/: Cargo.toml
crates/mde-voice-hud/src/: main.rs  roster.rs
crates/mde-wizard/: Cargo.toml
crates/mde-wizard/src/: main.rs
crates/mded/: Cargo.toml
import/mde-kdc/: Cargo.toml  README.md
rust/: .gitignore  ACCURACY.md  Cargo.toml  DEV-SETUP.md  README.md  SPEC-installer.md  SPEC-rebrand.md  SPEC-system.md  SPEC-windows10.md  preview.sh
rust/assets/labwc/: rc.xml
rust/mde/: Cargo.toml
rust/mde-ui/src/: font.rs  lib.rs  metrics.rs  palette.rs
rust/mde-ui/tests/: checklist.rs
rust/mde/src/: about.rs  action_center.rs  apps.rs  browser.rs  browser_jumplist.rs  catalogue.rs  clipboard.rs  control_panel.rs  cups.rs  dialogs.rs  disclaimer.rs  display.rs  embedded_icons.rs  fedora.rs  filedialog.rs  files.rs  icons.rs  install.rs  installer.rs  main.rs  menu.rs  mouse.rs  nm.rs  notifyd.rs  oobe.rs  outputs.rs  packages.rs  panel.rs  pin.rs  popup.rs  project.rs  search.rs  security.rs  security_probe.rs  settings.rs  snip.rs  start_common.rs  start_win10.rs  state.rs  sysinfo.rs  (+7 more)
rust/mde/tests/: accuracy.rs
rust/tests/: stage-rpm-assets.sh
rust/tests/accuracy/: capture.sh  checklist.toml  gallery.sh
(+1595 files in other folders)
