# MackesWorkstation — unified cargo workspace (§12 layout).
# Crates are organized under crates/{platform,mesh,shell,workbench,services,shared,applets,kdc,legacy}/.
# The canonical KDE Connect host is crates/kdc/{mde-kdc-proto,mde-kdc-host}; MDE's retiring
# in-tree copies live under crates/legacy/ (mde-kdc + mde-kdc-proto-legacy, path-dep'd by mackesd
# until the E2 convergence). Four crates are excluded — they need system dev libs absent here.

[workspace]
resolver = "2"
members = [
    "crates/applets/app-switcher",
    "crates/applets/apple-menu",
    "crates/applets/applet-api",
    "crates/applets/audio",
    "crates/applets/bg",
    "crates/applets/brightness-osd",
    "crates/applets/clock",
    "crates/applets/dock",
    "crates/applets/mesh-status",
    "crates/applets/network",
    "crates/applets/notification-bell",
    "crates/applets/notifications",
    "crates/applets/recents",
    "crates/applets/start-menu",
    "crates/applets/status-cluster",
    "crates/applets/sway-cluster",
    "crates/applets/volume-osd",
    "crates/kdc/mde-kdc-host",
    "crates/kdc/mde-kdc-proto",
    "crates/mesh/mackes-config",
    "crates/mesh/mackes-mesh-types",
    "crates/mesh/mackes-nebula-https-tunnel",
    "crates/mesh/mackes-transport",
    "crates/mesh/mackesd",
    "crates/mesh/mde-config",
    "crates/mesh/mde-mesh-types",
    "crates/mesh/mded",
    "crates/platform/mde-bus",
    "crates/services/mde-clipd",
    "crates/services/mde-files",
    "crates/services/mde-voice-config",
    "crates/services/mde-voice-hud",
    "crates/shared/mackes-theme",
    "crates/shared/mde-card",
    "crates/shared/mde-iced-components",
    "crates/shared/mde-theme",
    "crates/shell/mde",
    "crates/shell/mde-alert-emit",
    "crates/shell/mde-drawer",
    "crates/shell/mde-installer",
    "crates/shell/mde-logout-dialog",
    "crates/shell/mde-panel",
    "crates/shell/mde-peer-card",
    "crates/shell/mde-popover",
    "crates/shell/mde-portal",
    "crates/shell/mde-session",
    "crates/shell/mde-ui",
    "crates/shell/mde-wizard",
    "crates/workbench/mde-virtual",
]
exclude = [
    # Need system dev libraries (build on a box with them; see MIGRATION.md):
    #   mackes-panel → gtk3-devel (legacy GTK panel, retiring)
    #   mde-musicd/mde-music/mde-workbench → alsa-lib-devel (cpal audio)
    "crates/legacy/mackes-panel",
    "crates/services/mde-music",
    "crates/services/mde-musicd",
    "crates/workbench/mde-workbench",
]

[workspace.package]
version      = "10.0.0"
edition      = "2021"
rust-version = "1.85"
license      = "GPL-3.0-or-later"
authors      = ["Matthew Mackes <matthewmackes@gmail.com>"]
repository   = "https://github.com/matthewmackes/MackesWorkstation"

[workspace.dependencies]
iced = { version = "0.13", features = ["image", "svg", "advanced", "tokio"] }
iced_layershell = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
mde-ui = { path = "crates/shell/mde-ui" }

[workspace.lints.rust]
unsafe_code     = "forbid"
missing_docs    = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic    = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
unwrap_used = "warn"
panic       = "warn"
todo        = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
