# MackesWorkstation — unified cargo workspace (§12 layout).
# Crates are organized under crates/{platform,mesh,shell,workbench,services,shared,applets,kdc,legacy}/.
# The canonical KDE Connect host is crates/kdc/{mde-kdc-proto,mde-kdc-host}. MDE's retired
# in-tree copies under crates/legacy/ (mde-kdc + mde-kdc-proto-legacy) are reference-only as of
# the E2 convergence (E2.2, 2026-06-05) — no longer workspace members and depended on by nothing,
# so they are out of the build graph (`cargo metadata` lists 35 packages, neither among them).

[workspace]
resolver = "2"
members = [
    # E5.5/E0.17 (2026-06-05): the standalone applet *binaries* + the mde-panel
    # applet-host were retired — the integrated `mde` shell (panel.rs tray +
    # action_center/task_view/wallpaper/notifyd) supersedes them. The 4 applet
    # *backends* below stay: mde-popover (a live popover-host) links their libs
    # (start-menu/audio/clock/notifications), and they share applet-api. The 12
    # pure-standalone applets (had no lib consumers, only the dead host spawned
    # them) + mde-panel + mde-drawer were git-rm'd.
    "crates/applets/applet-api",
    "crates/applets/audio",
    "crates/applets/clock",
    "crates/applets/notifications",
    "crates/applets/start-menu",
    "crates/kdc/mde-kdc-host",
    "crates/kdc/mde-kdc-proto",
    "crates/mesh/mackes-config",
    "crates/mesh/mackes-mesh-types",
    "crates/mesh/mackes-nebula-https-tunnel",
    "crates/mesh/mackes-transport",
    "crates/mesh/mackesd",
    "crates/platform/mde-bus",
    "crates/platform/mde-role",
    "crates/services/mde-clipd",
    "crates/services/mde-files",
    "crates/services/mde-music",
    "crates/services/mde-musicd",
    "crates/services/mde-voice-config",
    "crates/services/mde-voice-hud",
    "crates/shared/mackes-theme",
    "crates/shared/mde-card",
    "crates/shared/mde-disclaimer",
    "crates/shared/mde-iced-components",
    "crates/shared/mde-theme",
    "crates/shell/mde",
    "crates/shell/mde-alert-emit",
    "crates/shell/mde-installer",
    "crates/shell/mde-logout-dialog",
    "crates/shell/mde-peer-card",
    "crates/shell/mde-popover",
    "crates/shell/mde-session",
    "crates/shell/mde-ui",
    "crates/shell/mde-wizard",
    "crates/workbench/mde-workbench",
]
# E0.2 (2026-06-03): the audio chain (mde-music/mde-musicd/mde-workbench) is back in
# the workspace now that alsa-lib-devel is on the dev box, and the legacy gtk3
# mackes-panel is retired (deleted — superseded by the iced shell's panel.rs). No
# crates are excluded; `cargo check --workspace` covers the whole tree.

[workspace.package]
version      = "10.0.0"
edition      = "2021"
rust-version = "1.85"
license      = "GPL-3.0-or-later"
authors      = ["Matthew Mackes <matthewmackes@gmail.com>"]
repository   = "https://github.com/matthewmackes/MackesWorkstation"

[workspace.dependencies]
iced = { version = "0.13", features = ["image", "svg", "advanced", "tokio"] }
iced_layershell = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
mde-ui = { path = "crates/shell/mde-ui" }

[workspace.lints.rust]
unsafe_code     = "forbid"
missing_docs    = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic    = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
unwrap_used = "warn"
panic       = "warn"
todo        = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
