[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mackes-shell"
version = "1.0.1"
description = "Mackes Shell — XFCE control panel and shell manager"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
authors = [
    { name = "Matt Mackes", email = "matthewmackes@gmail.com" },
]
keywords = ["xfce", "whisker-menu", "carbon-design", "settings", "fedora", "qnm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PyYAML",
    # PyGObject is the Fedora-RPM dep (python3-gobject); not a hard pip dep
    # because it requires system libraries (libgirepository, gtk3).
]

[project.scripts]
mackes = "mackes.app:main"

[project.urls]
Homepage = "https://github.com/mattmacke/mackes-shell"
Source   = "https://github.com/mattmacke/mackes-shell"
Issues   = "https://github.com/mattmacke/mackes-shell/issues"

[tool.setuptools.packages.find]
include = ["mackes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
