# Phase 13 — KDE Connect integration (Option A locked 2026-05-19).
#
# Wraps the upstream `kdeconnectd` D-Bus surface in a Mackes-shaped
# Rust client. Linked into `mackes-panel` so the Workbench Connect
# panels (13.3.x) read + drive the upstream daemon via D-Bus rather
# than re-implementing the protocol.
#
# Today ships value types + a stable public API surface; the live
# zbus calls land alongside the panel work in 13.1.2's implementation
# phase. Keeping the crate in-tree from the start so the panel can
# import it via path dependency without a Cargo edit later.

[package]
name         = "mackes-kdc"
description  = "Mackes Shell — KDE Connect client (Option A)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mackes_kdc"
path = "src/lib.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Phase 13.6 — integration tests build a temp QNM-Shared dir to
# exercise the mDNS bridge's read/write contract without Avahi.
tempfile = "3"

[lints]
workspace = true
