[package]
name        = "mackes-panel"
description = "Mackes XFCE Workstation panel — top status bar + bottom dock."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[[bin]]
name = "mackes-panel"
path = "src/main.rs"

[dependencies]
mackes-config     = { path = "../mackes-config" }
mackes-mesh-types = { path = "../mackes-mesh-types" }
gtk               = { version = "0.18", package = "gtk", features = ["v3_24"] }
gdk               = { version = "0.18" }
gio               = { version = "0.18" }
glib              = { version = "0.18" }
libc              = "0.2"

[lints]
workspace = true
