# Phase 12 — Enterprise Mesh Backend & GUI control plane.
#
# Ships TWO targets from one crate:
#
#   * Library `mackesd_core` — the authoritative read API. Linked
#     directly into `mackes-panel` so the GUI gets in-process access
#     to mesh state with zero IPC overhead. No networked API by Phase
#     12.A.3 lock.
#
#   * Binary  `mackesd`      — the reconcile loop + CLI. Runs on every
#     peer as a systemd unit; one is leader per the QNM-Shared lockfile
#     (12.A.5). Owns writes to the SQLite store.
#
# Both consume the same internal modules (store, policy, topology,
# telemetry, reconcile, deploy, audit) — they're not separate crates,
# just separate entry points.

[package]
name         = "mackesd"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description  = "Enterprise mesh control plane for Mackes XFCE Workstation"

[lib]
name = "mackesd_core"
path = "src/lib.rs"

[[bin]]
name = "mackesd"
path = "src/bin/mackesd.rs"

[dependencies]
mackes-mesh-types = { path = "../mackes-mesh-types" }

# v2.0.0 Phase B.7 — KDE Connect bridge worker reparents the
# standalone mackes-kdc crate as an in-process worker. Consumed by
# `crates/mackesd/src/workers/kdc_bridge.rs` under async-services.
mackes-kdc = { path = "../mackes-kdc" }

# KDC2-1 (v2.1, locked 2026-05-22) — Transport trait + capability
# model. Consumed by `crates/mackesd/src/topology/mod.rs` to bridge
# `TransportKind` → `EdgeKind`, and by the future mesh_router
# worker (KDC2-3). Implementations live elsewhere (mde-kdc,
# mackes-https-tunnel, mackesd::transport::direct_udp).
mackes-transport = { path = "../mackes-transport" }

# KDC2-3.10 — host integration crate consumed by the kdc_host
# worker under async-services. Pulls in mde-kdc-proto + rsa +
# pkcs8 transitively, so it's behind the same feature gate that
# already gates tokio + zbus.
mde-kdc = { path = "../mde-kdc", optional = true }

# KDC2-4.3 — pure protocol crate; mackesd's mesh-shunt helper
# in `transport::mesh_shunt` consumes `DiscoveryRegistry` +
# `Announce` + `SyntheticAnnounce` for the phones.json →
# registry fan-out. No feature gate — these are pure types,
# no I/O or async runtime needed in the base build.
mde-kdc-proto = { path = "../mde-kdc-proto" }

# Storage: SQLite via rusqlite (sync, no async runtime needed for the
# reconcile loop's cadence). WAL mode + 5 s busy timeout per 12.A.2.
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI parsing: clap derive macro for declarative subcommand routing.
clap = { version = "4.5", features = ["derive", "env"] }

# JSON for revisions + events + QNM-Shared heartbeat files. Serde
# everything; explicit (de)serializers per type.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# KDC2-1.11 — TOML parser for /etc/mde/connect/policy.toml +
# operator override at ~/.config/mde/connect/policy.toml.
# default-features = false because we don't need TOML's
# date / preserve_order features here.
toml = { version = "0.8", default-features = false, features = ["parse"] }

# Time: chrono for ISO-8601 timestamps stored in SQLite TEXT columns.
chrono = { version = "0.4", features = ["serde"] }

# Crypto: SHA-256 for the audit-log hash chain + 16-char URL-safe
# passcode generation.
sha2 = "0.10"
rand = "0.8"

# Phase 12.10.4 — zero-on-drop for bearer tokens + passcodes.
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Phase 12.3.2 — per-node Ed25519 identity (signed enrollment + audit
# row signing).
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Filesystem locking for the leader-election lockfile (12.A.5).
fs2 = "0.4"

# Error context. We surface failures as structured errors, never
# unwrap. anyhow is the canonical Rust ergonomic-error crate.
anyhow = "1"

# Structured logging. tracing macros emit JSON spans; the binary
# initializes a subscriber that writes to stderr in dev and the
# journal in prod.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Directory resolution that honors $XDG_*_HOME with sensible fallbacks.
dirs = "5"

# Phase 12.5 — SIGTERM/SIGINT handling for `mackesd reconcile`. Used
# only by the binary; the library never installs signal handlers.
# Pinned to the same major as the published 0.3.x line so the build
# stays reproducible across the workspace.
signal-hook = { version = "0.4", features = ["iterator"] }

# Phase 12.11.2 — testcontainers-based E2E integration suite. Gated
# behind the `docker-tests` feature so `cargo test` stays Docker-free
# on a fresh checkout. Pinned to 0.25 because the workspace's rust-
# version (1.85) is below the 1.88 minimum of 0.27+. Used only by
# `tests/integration_testcontainers.rs`. Cargo disallows optional
# dev-dependencies, so it lives in [dependencies] under a feature
# gate; the library/binary code never touches it.
testcontainers = { version = "0.25", features = ["blocking"], optional = true }

# --- v2.0.0 Phase A — async surface for in-process worker pool + DBus ---
#
# These three deps are gated behind the `async-services` feature so the
# existing sync code (rusqlite store, reconcile loop on std::thread,
# leader lockfile via fs2) builds untouched on a fresh checkout. The
# binary at src/bin/mackesd.rs enables the feature when it spawns the
# tokio runtime + supervisor + zbus servers; library consumers (the
# mackes-panel link target) can ignore it.

# Async runtime — full features (rt-multi-thread + macros + signal +
# fs + net + io-util + sync + time) for the new worker pool. Locked
# 2026-05-19.
tokio = { version = "1", features = ["full"], optional = true }

# Erlang-style worker supervisor: restart back-off, periodic health
# checks via tick(), runtime add/remove through SupervisorHandle.
# v0.4 chosen per the 2026 stack survey 2026-05-19.
task-supervisor = { version = "0.4", optional = true }

# DBus session-bus services for org.mackes.{Shell,Settings,
# Notifications,Session,Fleet}. tokio feature so the zbus runtime
# cooperates with the worker pool; default-features disabled to skip
# the async-io thread launches. blocking-api stays off — the library
# never blocks.
zbus = { version = "5", default-features = false, features = ["tokio"], optional = true }

# v2.0.0 Phase A — async-trait for object-safe `Worker` boxing in the
# in-process supervisor (`crate::workers::Worker`). Native async-fn-
# in-trait is stable on 1.75+ but isn't object-safe for `Box<dyn>`
# storage, which the supervisor needs. Locked 2026-05-19.
async-trait = { version = "0.1", optional = true }

# Phase 12.14 — LAN peer auto-detection. `mdns-sd` is async-runtime-
# agnostic (spawns its own daemon thread internally) so it cohabitates
# with tokio without a dedicated executor. Used by
# `workers::lan_discovery`. Locked 2026-05-19 — Q7 detection < 30 s,
# Q8 first-packet < 3 s.
mdns-sd = { version = "0.11", optional = true }

[dev-dependencies]
# Deterministic snapshot diffs for library-contract tests (12.11.5).
insta    = { version = "1", features = ["json", "redactions"] }
tempfile = "3"

[features]
# Phase 12.11.2 — opt-in E2E suite that needs a running Docker daemon.
# Run with `cargo test -p mackesd --features docker-tests`. Tests
# self-skip when the daemon isn't reachable so they're safe to enable
# in CI without forcing every developer to install Docker.
docker-tests = ["dep:testcontainers"]

# XOrg fork — compile mackesd with X11 session plumbing (i3 / xrandr).
# Used by the `mde-xorg` RPM sub-package build.
x11 = []

# v2.0.0 Phase A — opt-in async worker pool + DBus surface. Enabled by
# `cargo build --features async-services` and by `mackesd serve` in
# the binary. The library's `workers/`, `ipc/`, and `settings/`
# modules compile only with this feature; downstream library
# consumers that just want the existing sync read-API can leave it
# off. Locked 2026-05-19.
async-services = ["dep:tokio", "dep:task-supervisor", "dep:zbus", "dep:async-trait", "dep:mdns-sd", "dep:mde-kdc"]

[package.metadata.docs.rs]
# Skip the docker-tests feature on docs.rs — it pulls a network
# dependency tree that adds build time without exposing public API.
no-default-features = true

[lints]
workspace = true
