[package]
name        = "mde-alert-emit"
description = "MON-3 (v2.6) — translate a Netdata alert state-change into a deterministic-ULID-named JSON event under ~/.local/share/mde/alerts/<ulid>.json. Wired by health_alarm_notify.conf's custom_sender_email; consumed by mded's alert_relay worker (MON-4)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[[bin]]
name = "mde-alert-emit"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.5", features = ["derive", "env"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
