[package]
name        = "mde-bus"
description = "Mackes Bus — mesh-wide notification + clipboard pub/sub bus on self-hosted ntfy over Nebula. v6.x BUS-1..7 epic."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_bus"
path = "src/lib.rs"

[[bin]]
name = "mde-bus"
path = "src/main.rs"

[dependencies]
# Match mackesd's canonical versions (workspace lint forbids drift).
anyhow             = "1"
clap               = { version = "4.5", features = ["derive"] }
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Tera is the locked templating engine (BUS-1.10, Round 10 of the 104-Q
# poll). Jinja2-style syntax, Rust-native, no extra runtime.
tera = { version = "1.20", default-features = false }

# Serde + serde_json for topic + message + manifest serialisation.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# UTC timestamps for the curated `time.*` template variables.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# XDG paths (~/.local/share/mde/bus/...) match the rest of the workspace.
dirs = "5"

# BUS-1.3 — zeroconf discovery. Same version mackesd uses for its
# LAN-discovery worker so the workspace lint doesn't flip on
# multiple-version drift.
mdns-sd = "0.11"

# Error enums — matches mackesd + mackes-nebula-https-tunnel versions.
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code     = "forbid"
unused_must_use = "deny"
missing_docs    = "allow"

[lints.clippy]
pedantic                = { level = "allow", priority = -1 }
nursery                 = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
unwrap_used             = "warn"
panic                   = "warn"
todo                    = "warn"
